# weedle3

./: .gitattributes  Cargo.toml  output.txt
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
src/: argument.rs  attribute.rs  common.rs  dictionary.rs  interface.rs  lexer.rs  lib.rs  literal.rs  macros.rs  members.rs  mixin.rs  namespace.rs  parser.rs  term.rs  tokens.rs  types.rs  whitespace.rs  writer.rs
src/lexer/: keywords.rs  nom_branch_alt.rs  pseudo_lex.rs
src/parser/: callback.rs  dictionary.rs  eat.rs  enumeration.rs  extended_attributes.rs  generate_match_test.rs  impl_nom_traits.rs  includes.rs  interface.rs  namespace.rs  primitive_type.rs  type.rs  typedef.rs
tests/: lexer.rs  parser.rs  webidl.rs
tests/baselines/: allowany.txt  argument-constructor.txt  argument-extattrs.txt  async-iterable.txt  async-name.txt  attributes.txt  bigint.txt  buffersource.txt  callback.txt  constants.txt  constructor.txt  default.txt  dictionary-inherits.txt  dictionary.txt  documentation-dos.txt  documentation.txt  dom.txt  enum.txt  equivalent-decl.txt  escaped-name.txt  escaped-type.txt  exposed-asterisk.txt  extended-attributes.txt  generic.txt  getter-setter.txt  html.txt  identifier-hyphen.txt  identifier-qualified-names.txt  includes-name.txt  indexed-properties.txt  inherits-getter.txt  interface-constructor.txt  interface-inherits.txt  iterable.txt  maplike.txt  mediacapture-streams.txt  mixin.txt  namedconstructor.txt  namespace.txt  nointerfaceobject.txt  (+30 more)
tests/defs/: argument-constructor.webidl  extended-attributes.webidl  (+2 more)
(+162 files in other folders)
