[package]
name = "weedle2"
version = "4.0.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>", "Jan-Erik Rediger <jrediger@mozilla.com>"]
description = "A WebIDL Parser"
license = "MIT"
documentation = "https://docs.rs/weedle2"
homepage = "https://github.com/mozilla/uniffi-rs/tree/main/weedle2"
repository = "https://github.com/mozilla/uniffi-rs"
readme = "./README.md"
edition = "2021"
# No need to include the large tests in the published package
exclude = ["tests"]

[lib]
name = "weedle"

[workspace]
members = ["derive"]

[dependencies]
nom = "7.1.0"
paste = "1.0.11"
weedle_derive = { path = "derive" }

[dev-dependencies]
test-generator = "0.3.0"
